# IDC410-Spring-2025

./: .gitignore  README.md  pyproject.toml
assignments/assignment-1/: assignment-1.ipynb
assignments/assignment-2/: assignment-2.ipynb
assignments/assignment-3/: assignment-3.ipynb
