[project]
name = "idc410-spring-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
]
